--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
-author=Nobody
-support=
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Narration
+author=adamk33n3r
+support=https://github.com/adamk33n3r/RuneLiteNarration/issues
+description=Adds narration to the game
+tags=narration,audio,dialog,accessibility
+plugins=com.adamk33n3r.runelite.NarrationPlugin
