Fixed the runelite-plugin.properties file

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -3,4 +3,4 @@ author=adamk33n3r
 support=https://github.com/adamk33n3r/RuneLiteNarration/issues
 description=Adds narration to the game
 tags=narration,audio,dialog,accessibility
-plugins=com.adamk33n3r.runelite.NarrationPlugin
+plugins=com.adamk33n3r.runelite.narration.NarrationPlugin
