--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Example
-author=Nobody
+author=adamk33n3r
 support=
 description=An example greeter plugin
 tags=
-plugins=com.example.ExamplePlugin
+plugins=ExamplePlugin
