--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Example
+displayName=AFK Warden
 author=adamk33n3r
 support=
-description=An example greeter plugin
+description=
 tags=
-plugins=ExamplePlugin
+plugins=com.adamk33n3r.runelite.afkwarden.AFKWardenPlugin
