--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,8 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
+	implementation 'net.sf.sociaal:freetts:1.2.2'
+
 	testImplementation 'junit:junit:4.12'
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
@@ -49,7 +51,7 @@ versionProps['VERSION_BUILD'] = (build + 1).toString()
 versionProps['VERSION_PHASE'] = phase
 versionProps.store(versionPropsFile.newWriter(), null)
 
-group = 'com.adamk33n3r.runelite.example'
+group = 'com.adamk33n3r.runelite.afkwarden'
 version = major+'.'+minor+'.'+patch+'.'+build
 if (!phase.empty)
 	version = version+'-'+phase
