--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 plugins {
 	id 'java'
-//	id 'com.github.johnrengelman.shadow' version '6.1.0'
+	id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
 
-//shadowJar {
-//	from sourceSets.test.output
-//	configurations = [project.configurations.testRuntimeClasspath]
-//	manifest {
-//		attributes 'Main-Class': 'com.adamk33n3r.runelite.narration.NarrationPluginTest'
-//	}
-//}
+shadowJar {
+	from sourceSets.test.output
+	configurations = [project.configurations.testRuntimeClasspath]
+	manifest {
+		attributes 'Main-Class': 'com.adamk33n3r.runelite.watchdog.WatchdogPluginLauncher'
+	}
+}
 
 repositories {
 	mavenLocal()
@@ -19,7 +19,7 @@ repositories {
 	mavenCentral()
 }
 
-def runeLiteVersion = '1.8.1'
+def runeLiteVersion = '1.8.9'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
@@ -51,7 +51,7 @@ versionProps['VERSION_BUILD'] = (build + 1).toString()
 versionProps['VERSION_PHASE'] = phase
 versionProps.store(versionPropsFile.newWriter(), null)
 
-group = 'com.adamk33n3r.runelite.afkwarden'
+group = 'com.adamk33n3r.runelite.watchdog'
 version = major+'.'+minor+'.'+patch+'.'+build
 if (!phase.empty)
 	version = version+'-'+phase
