Refactored notifications and added more settings
Also fixed the panel filling the height by copying and modifying the DynamicGridLayout

--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Mon Jan 10 16:20:21 EST 2022
-VERSION_BUILD=786
-VERSION_PHASE=
-VERSION_MAJOR=0
-VERSION_MINOR=1
+#Wed Jan 12 19:24:38 EST 2022
+VERSION_BUILD=939
+VERSION_PHASE=rc
+VERSION_MAJOR=1
+VERSION_MINOR=0
 VERSION_PATCH=0
