--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=AFK Warden
+displayName=Watchdog
 author=adamk33n3r
-support=
-description=
-tags=
-plugins=com.adamk33n3r.runelite.afkwarden.AFKWardenPlugin
+support=https://github.com/adamk33n3r/runelite-watchdog/issues
+description=Watches over you while you afk
+tags=alert,notification
+plugins=com.adamk33n3r.runelite.watchdog.WatchdogPlugin
