--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Wed Jan 12 19:24:38 EST 2022
-VERSION_BUILD=939
-VERSION_PHASE=rc
+#Sat Jan 15 04:10:44 EST 2022
+VERSION_BUILD=940
+VERSION_PHASE=release
 VERSION_MAJOR=1
 VERSION_MINOR=0
 VERSION_PATCH=0
