--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,12 @@ if (versionPropsFile.exists())
 def major = (versionProps['VERSION_MAJOR'] as String ?: '0').toInteger()
 def minor = (versionProps['VERSION_MINOR'] as String ?: '0').toInteger()
 def patch = (versionProps['VERSION_PATCH'] as String ?: '0').toInteger()
-def build = (versionProps['VERSION_BUILD'] as String ?: '0').toInteger()
+def build = (versionProps['VERSION_BUILD'] as String ?: '0').toInteger() + 1
 def phase = (versionProps['VERSION_PHASE'] as String ?: '')
 versionProps['VERSION_MAJOR'] = major.toString()
 versionProps['VERSION_MINOR'] = minor.toString()
 versionProps['VERSION_PATCH'] = patch.toString()
-versionProps['VERSION_BUILD'] = (build + 1).toString()
+versionProps['VERSION_BUILD'] = build.toString()
 versionProps['VERSION_PHASE'] = phase
 versionProps.store(versionPropsFile.newWriter(), null)
 
