--- a/version.properties
+++ b/version.properties
@@ -1,5 +1,5 @@
-#Sat Jan 29 22:27:17 EST 2022
-VERSION_BUILD=956
+#Sat May 14 17:47:45 EDT 2022
+VERSION_BUILD=974
 VERSION_PHASE=release
 VERSION_MAJOR=1
 VERSION_MINOR=0
