--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Sat May 14 17:47:45 EDT 2022
-VERSION_BUILD=974
+#Sat Jun 11 12:48:41 CEST 2022
+VERSION_BUILD=977
 VERSION_PHASE=release
 VERSION_MAJOR=1
-VERSION_MINOR=0
+VERSION_MINOR=1
 VERSION_PATCH=3
