--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
 displayName=Watchdog
 author=adamk33n3r
 support=https://github.com/adamk33n3r/runelite-watchdog/issues
-description=Watches over you while you afk
+description=Create custom alerts for different events like messages, stats, or built-in notifications
 tags=alert,notification
 plugins=com.adamk33n3r.runelite.watchdog.WatchdogPlugin
