--- a/version.properties
+++ b/version.properties
@@ -1,5 +1,5 @@
-#Sat Jun 11 12:48:41 CEST 2022
-VERSION_BUILD=977
+#Thu Nov 03 16:45:19 EDT 2022
+VERSION_BUILD=1021
 VERSION_PHASE=release
 VERSION_MAJOR=1
 VERSION_MINOR=1
