feat: Import/Export and Enable toggle switch

--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Fri Nov 04 00:28:57 EDT 2022
-VERSION_BUILD=1040
+#Sun Nov 13 11:46:42 EST 2022
+VERSION_BUILD=1104
 VERSION_PHASE=release
 VERSION_MAJOR=1
-VERSION_MINOR=2
+VERSION_MINOR=3
 VERSION_PATCH=0
