--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Sun Nov 13 11:46:42 EST 2022
+#Mon Nov 14 19:35:25 EST 2022
 VERSION_BUILD=1104
-VERSION_PHASE=release
+VERSION_PHASE=rc1
 VERSION_MAJOR=1
 VERSION_MINOR=3
 VERSION_PATCH=0
