--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Tue Nov 15 23:30:21 EST 2022
-VERSION_BUILD=1137
-VERSION_PHASE=rc2
+#Wed Nov 16 01:30:30 EST 2022
+VERSION_BUILD=1140
+VERSION_PHASE=release
 VERSION_MAJOR=1
 VERSION_MINOR=3
 VERSION_PATCH=0
