feat: Added capture groups to text based alerts
You can use `{}` to surround parts of a message you want to capture and then use `$n` in a notification where n is the group number.
e.g. `Your {*} is ready to harvest in {*}` for the chat alert and in the Text to Speech you could put `The $1 is ready in $2`

Fixes #9

--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Sat Dec 03 10:10:43 EST 2022
-VERSION_BUILD=1442
-VERSION_PHASE=release
-VERSION_MAJOR=1
-VERSION_MINOR=3
+#Tue Dec 06 00:47:35 EST 2022
+VERSION_BUILD=1468
+VERSION_PHASE=rc1
+VERSION_MAJOR=2
+VERSION_MINOR=0
 VERSION_PATCH=0
