feat: Overhead text notification type
Closes #12

--- a/version.properties
+++ b/version.properties
@@ -1,6 +1,6 @@
-#Thu Jan 05 22:34:41 EST 2023
-VERSION_BUILD=1658
-VERSION_PHASE=rc4
+#Fri Jan 06 18:04:17 EST 2023
+VERSION_BUILD=1668
+VERSION_PHASE=release
 VERSION_MAJOR=2
 VERSION_MINOR=0
 VERSION_PATCH=0
