feat: Add discord and wiki links

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Watchdog
+displayName=Watchdog Alerts
 author=adamk33n3r
 support=https://github.com/adamk33n3r/runelite-watchdog/issues
 description=Create custom alerts for different events like messages, stats, or built-in notifications
-tags=alert,notification
+tags=alert,notification,custom,overlay,sound,drop,afk
 plugins=com.adamk33n3r.runelite.watchdog.WatchdogPlugin
