--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/watchdog.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/watchdog.properties
@@ -1,1 +1,3 @@
-wikiPage.soundIDs=https://oldschool.runescape.wiki/w/List_of_in-game_sound_IDs
+watchdog.wikiPage.soundIDs=https://oldschool.runescape.wiki/w/List_of_in-game_sound_IDs
+watchdog.helpURL=https://github.com/adamk33n3r/runelite-watchdog/wiki
+watchdog.discordURL=https://discord.gg/n8mxYAHJR9
