feat: Sound Effect notification

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Sun Feb 05 22:57:55 EST 2023
-VERSION_BUILD=1810
-VERSION_PHASE=release
+#Mon Feb 06 03:39:10 EST 2023
+VERSION_BUILD=1839
+VERSION_PHASE=rc1
 VERSION_MAJOR=2
 VERSION_MINOR=4
 VERSION_PATCH=0
