feat: Custom screen flash duration

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Mon Feb 27 12:30:30 EST 2023
-VERSION_BUILD=2012
+#Mon Mar 20 20:07:23 EDT 2023
+VERSION_BUILD=2029
 VERSION_PHASE=release
 VERSION_MAJOR=2
-VERSION_MINOR=7
-VERSION_PATCH=3
+VERSION_MINOR=8
+VERSION_PATCH=0
