--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Sat Apr 15 19:38:33 EDT 2023
-VERSION_BUILD=2040
-VERSION_PHASE=release
+#Thu Apr 20 23:51:41 EDT 2023
+VERSION_BUILD=2056
+VERSION_PHASE=rc2
 VERSION_MAJOR=2
-VERSION_MINOR=9
+VERSION_MINOR=10
 VERSION_PATCH=0
