Added in threading for *all* notifications. may require further testing. Test included running with an obscenely long message call to TTS that ordinarily would've locked up until it came back. With this (if accepted) also will not require local files

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Sat Apr 22 13:04:57 EDT 2023
-VERSION_BUILD=2061
+#Wed Apr 26 11:50:57 CDT 2023
+VERSION_BUILD=2068
 VERSION_PHASE=rc3
 VERSION_MAJOR=2
 VERSION_MINOR=10
