--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Wed Apr 26 11:50:57 CDT 2023
-VERSION_BUILD=2068
-VERSION_PHASE=rc3
+#Thu Apr 27 04:00:59 EDT 2023
+VERSION_BUILD=2082
+VERSION_PHASE=release
 VERSION_MAJOR=2
 VERSION_MINOR=10
 VERSION_PATCH=0
