--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,5 +2,5 @@ displayName=Watchdog Alerts
 author=adamk33n3r
 support=https://github.com/adamk33n3r/runelite-watchdog/issues
 description=Create custom alerts for different events like messages, stats, or built-in notifications
-tags=alert,notification,custom,overlay,sound,drop,afk
+tags=alert,notification,custom,advanced,overlay,sound,drop,afk,tracker,reminder,notify,notifier,helper,timer,message
 plugins=com.adamk33n3r.runelite.watchdog.WatchdogPlugin
