feat: Alert groups

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Sun Jul 02 14:38:39 EDT 2023
-VERSION_BUILD=2238
-VERSION_PHASE=release
-VERSION_MAJOR=2
-VERSION_MINOR=13
-VERSION_PATCH=1
+#Mon Jul 03 22:07:03 EDT 2023
+VERSION_BUILD=2323
+VERSION_PHASE=alpha
+VERSION_MAJOR=3
+VERSION_MINOR=0
+VERSION_PATCH=0
