Bring some of the notification layout to the alert item
Started alert hub panel work

--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,10 @@ versionProps['VERSION_BUILD'] = build.toString()
 versionProps['VERSION_PHASE'] = phase
 versionProps.store(versionPropsFile.newWriter(), null)
 
-version = major+'.'+minor+'.'+patch+'.'+build
+version = major+'.'+minor+'.'+patch
 if (!phase.empty)
 	version = version+'-'+phase
+version = version+'+'+build
 sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
