--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
 def runeLiteVersion = 'latest.release'
 
 dependencies {
-	implementation files('libs/jaco-mp3-player-0.9.5.jar')
+	implementation files('lib/jaco-mp3-player-0.9.5.jar')
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
