Add Player Chat Alert

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Mon Sep 18 20:12:23 EDT 2023
-VERSION_BUILD=2440
+#Sat Sep 23 13:29:53 PDT 2023
+VERSION_BUILD=2445
 VERSION_PHASE=release
 VERSION_MAJOR=2
 VERSION_MINOR=14
