--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,6 @@
 plugins {
 	id 'java'
-//	id 'com.github.johnrengelman.shadow' version '6.1.0'
 }
-
-//shadowJar {
-//	from sourceSets.test.output
-//	configurations = [project.configurations.testRuntimeClasspath]
-//	manifest {
-//		attributes 'Main-Class': 'com.adamk33n3r.runelite.watchdog.WatchdogPluginLauncher'
-//	}
-//}
 
 repositories {
 	mavenLocal()
@@ -56,7 +47,33 @@ if (!phase.empty)
 	version = version+'-'+phase
 version = version+'+'+build
 sourceCompatibility = '1.8'
+targetCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
+}
+
+tasks.register("shadowJar", Jar) {
+	dependsOn configurations.testRuntimeClasspath
+	manifest {
+		attributes 'Main-Class': 'com.adamk33n3r.runelite.watchdog.WatchdogPluginLauncher'
+	}
+
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+	from sourceSets.main.output
+	from sourceSets.test.output
+	from({
+		configurations.testRuntimeClasspath.collect {
+			it.isDirectory() ? it : zipTree(it)
+		}
+	})
+	exclude("META-INF/INDEX.LIST")
+	exclude("META-INF/*.SF")
+	exclude("META-INF/*.DSA")
+	exclude("META-INF/*.RSA")
+	exclude "**/module-info.class"
+
+	group = BasePlugin.BUILD_GROUP
+	archiveClassifier = "shadow"
+	archiveFileName = rootProject.name + "-" + project.version + "-all.jar"
 }
