--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Fri Sep 29 03:24:19 EDT 2023
-VERSION_BUILD=3272
-VERSION_PHASE=alpha
+#Sat Oct 07 23:20:07 EDT 2023
+VERSION_BUILD=3822
+VERSION_PHASE=rc1
 VERSION_MAJOR=3
 VERSION_MINOR=0
 VERSION_PATCH=0
