--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Sat Sep 23 13:48:42 PDT 2023
-VERSION_BUILD=2447
+#Thu Oct 12 04:51:42 EDT 2023
+VERSION_BUILD=2513
 VERSION_PHASE=release
 VERSION_MAJOR=2
-VERSION_MINOR=14
-VERSION_PATCH=2
+VERSION_MINOR=15
+VERSION_PATCH=0
