Add AFK Notification Config

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Thu Oct 12 04:51:42 EDT 2023
-VERSION_BUILD=2513
+#Thu Oct 12 18:09:58 PDT 2023
+VERSION_BUILD=2514
 VERSION_PHASE=release
 VERSION_MAJOR=2
 VERSION_MINOR=15
