--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Sat Oct 21 03:28:20 EDT 2023
-VERSION_BUILD=4085
-VERSION_PHASE=rc2
+#Sat Oct 21 12:23:27 EDT 2023
+VERSION_BUILD=4092
+VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=0
 VERSION_PATCH=0
