Add looping sounds

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Wed Oct 25 21:44:00 EDT 2023
-VERSION_BUILD=4133
+#Mon Oct 30 22:43:41 PDT 2023
+VERSION_BUILD=4152
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=0
