feat: Add chat message picker
Also fixes #110

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Tue Oct 31 23:15:59 EDT 2023
-VERSION_BUILD=4143
+#Fri Nov 17 20:31:14 EST 2023
+VERSION_BUILD=4182
 VERSION_PHASE=release
 VERSION_MAJOR=3
-VERSION_MINOR=0
-VERSION_PATCH=1
+VERSION_MINOR=1
+VERSION_PATCH=0
