Add Inventory Change Alerts
Closes #124

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Sat Feb 24 21:30:52 EST 2024
-VERSION_BUILD=4277
+#Mon Feb 26 15:50:58 PST 2024
+VERSION_BUILD=4285
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=3
