feat: delayed notifications
Closes #17

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Mon Feb 26 15:50:58 PST 2024
-VERSION_BUILD=4285
+#Tue Mar 05 22:58:26 EST 2024
+VERSION_BUILD=4297
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=3
