feat: comparable numbers

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Thu Mar 07 11:56:14 EST 2024
-VERSION_BUILD=4317
+#Mon Mar 25 00:45:48 EDT 2024
+VERSION_BUILD=4343
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=3
