feat: multi select alert actions
move to alert group, export, and remove

Closes #116 and #86

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Mon Mar 25 00:45:48 EDT 2024
-VERSION_BUILD=4343
-VERSION_PHASE=release
+#Thu Mar 28 21:34:51 EDT 2024
+VERSION_BUILD=4424
+VERSION_PHASE=rc2
 VERSION_MAJOR=3
 VERSION_MINOR=3
 VERSION_PATCH=0
