feat: tools panel

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Mon Apr 01 05:44:37 EDT 2024
-VERSION_BUILD=4515
-VERSION_PHASE=rc3
+#Mon Apr 01 22:41:00 EDT 2024
+VERSION_BUILD=4538
+VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=3
 VERSION_PATCH=0
