fix(jagex): add region restrictions

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ compileJava.doFirst {
 
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
+	options.release.set(11)
 }
 
 tasks.register("shadowJar", Jar) {
