Inventory Change handle missing items
Fixes #144

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Fri Apr 19 19:38:50 EDT 2024
-VERSION_BUILD=4633
+#Sat Apr 27 20:47:06 PDT 2024
+VERSION_BUILD=4634
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=3
