feat: random notifications

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Sat Apr 27 21:47:28 PDT 2024
-VERSION_BUILD=4638
+#Wed May 01 02:34:01 EDT 2024
+VERSION_BUILD=4686
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=3
