--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,6 +1,6 @@
-displayName=Watchdog Alerts
+displayName=Watchdog (Custom Alerts)
 author=adamk33n3r
 support=https://github.com/adamk33n3r/runelite-watchdog/issues
-description=Create custom alerts for different events like messages, stats, or built-in notifications
+description=Create custom alerts for different events like messages, stats, inventory changes, or built-in notifications
 tags=alert,notification,custom,advanced,overlay,sound,drop,afk,tracker,reminder,notify,notifier,helper,timer,message
 plugins=com.adamk33n3r.runelite.watchdog.WatchdogPlugin
