update task to only update build number on build task
and specifically ignore `runelitePluginHubPackage` just in case

--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ targetCompatibility = '1.8'
 
 compileJava.doFirst {
     def runTasks = gradle.startParameter.taskNames
-    if ("shadowJar" in runTasks) return
+    if ("build" !in runTasks || "runelitePluginHubPackage" in runTasks) return
     build += 1
     versionProps['VERSION_BUILD'] = build.toString()
     versionProps.store(versionPropsFile.newWriter(), null)
