fix: try fixing house location

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,6 +1,6 @@
-#Thu May 23 19:54:12 EDT 2024
-VERSION_BUILD=4721
-VERSION_PHASE=release
+#Mon Dec 16 08:03:39 EST 2024
+VERSION_BUILD=4722
+VERSION_PHASE=house-loc
 VERSION_MAJOR=3
 VERSION_MINOR=4
 VERSION_PATCH=3
