feat: sum all matching items for inventory alerts

--- a/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
+++ b/src/main/resources/com/adamk33n3r/runelite/watchdog/version.properties
@@ -1,5 +1,5 @@
-#Thu May 23 19:54:12 EDT 2024
-VERSION_BUILD=4721
+#Mon Dec 16 08:28:12 EST 2024
+VERSION_BUILD=4725
 VERSION_PHASE=release
 VERSION_MAJOR=3
 VERSION_MINOR=4
