--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:3.4.0'
-    testImplementation 'com.google.inject.extensions:guice-testlib:4.1.0'
+    testImplementation('com.google.inject.extensions:guice-testlib:4.1.0') {
+        exclude group: "com.google.inject", module: "guice" // already provided by runelite client
+    }
     testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
     testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 }
