--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,10 +10,16 @@ name: Java CI with Gradle
 on:
   push:
     branches: [ "master" ]
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-*'
   pull_request:
     branches: [ "master" ]
-  create:
   workflow_dispatch:
+
+concurrency:
+  group: build-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
@@ -85,11 +91,13 @@ jobs:
   create-release:
     needs: build
     runs-on: ubuntu-latest
-    if: github.event_name == 'create' && startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     steps:
       - uses: actions/download-artifact@v4.1.9
         with:
           path: release-artifacts/
+      - name: list artifacts
+        run: ls -alR release-artifacts/
       - name: Create release
         uses: ncipollo/release-action@v1.16.0
         with:
