fix: dont run dependency submission on prs

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -87,7 +87,7 @@ jobs:
         path: CHANGELOG.md
 
   dependency-submission:
-
+    if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     permissions:
       contents: write
