--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -70,6 +70,8 @@ jobs:
       uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
 
     - name: Build with Gradle Wrapper
+      env:
+        ELEVEN_LABS_API_KEY: ${{ secrets.ELEVEN_LABS_API_KEY }}
       run: ./gradlew build
 
     - name: Build shadowJar
